# dot-graph

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: error.rs  graphviz.rs  lib.rs  main.rs  parser.rs  structs.rs
src/ast/: edge.rs  graph.rs  node.rs
src/attr/: mod.rs
src/edge/: edge.rs  id.rs  mod.rs
src/graph/: graph.rs  igraph.rs  mod.rs  subgraph.rs
src/graphs/: graph.rs  igraph.rs  mod.rs  subgraph.rs
src/impls/: edge.rs  graph.rs  igraph.rs  mod.rs  node.rs  subgraph.rs
src/node/: mod.rs
src/utils/: mod.rs
tests/: integration_test.rs
