[package]
name = "dot-graph"
version = "0.1.0"
authors = ["FuriosaAI, Inc."]
description = "A parser for directed graph in dot format with FFI to Graphviz cgraph library"
readme = "README.md"
keywords = ["graph", "graphviz", "dag", "dot", "parse"]
license = "MIT"
repository = "https://github.com/furiosa-ai/dot-graph"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.38"
rayon = "1.6.1"

[build-dependencies]
bindgen = "0.59.1"
